Tweaks to the web page. Still missing docs.

--- a/src/NCompileBench.Web/wwwroot/index.html
+++ b/src/NCompileBench.Web/wwwroot/index.html
@@ -58,8 +58,7 @@
 
     <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
         <li class="nav-item">
-            <a class="nav-link p-2" href="https://github.com/mikoskinen/NCompileBench" target="_blank" rel="noopener">Project
-                Home</a>
+            <a class="nav-link p-2" href="https://github.com/mikoskinen/NCompileBench" target="_blank" rel="noopener">Source Code & Project Home</a>
         </li>
     </ul>
 </header>
@@ -139,9 +138,8 @@
         <div class="col-12">
             <footer class="bd-footer text-muted">
                 <div class="p-4">
-                    <p>Footer juttuja</p>
-                    <p>Documentation built with <a target="_blank" href="https://www.grazedocs.io">NCompileBench.io</a>.
-                        <a target="_blank" href="https://getbootstrap.com/docs/4.3/assets/css/docs.min.css">"Bootstrap
+                    <p>Copyright 2021 and built by <a href="https://mikaelkoskinen.net" target="_blank">Mikael Koskinen</a></p>
+                    <p><a target="_blank" href="https://getbootstrap.com/docs/4.3/assets/css/docs.min.css">"Bootstrap
                             Docs"</a> theme by Twitter is licensed under <a
                             href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC
                             BY 3.0</a></p>
