--- a/src/NCompileBench.Web/wwwroot/index.html
+++ b/src/NCompileBench.Web/wwwroot/index.html
@@ -51,7 +51,7 @@
     <div class="navbar-nav-scroll">
         <ul class="navbar-nav bd-navbar-nav flex-row">
             <li class="nav-item">
-                <a class="nav-link" href="#">NCompileBench.io</a>
+                <a class="nav-link" href="/">NCompileBench</a>
             </li>
         </ul>
     </div>
@@ -78,7 +78,7 @@
             <nav class="collapse bd-links" id="bd-docs-nav">
 
                 <div class="bd-toc-item active">
-                    <a class="bd-toc-link" href="#">
+                    <a class="bd-toc-link" href="/">
                         Home
                     </a>
 
@@ -89,7 +89,7 @@
                             </a>
                         </li>
                         <li class="">
-                            <a href="#">
+                            <a href="/help.html">
                                 Help
                             </a>
                         </li>
@@ -108,13 +108,9 @@
                     <h3>Getting started</h3>
                     <p>NCompileBench is available as dotnet global tool. To install:</p>
 
-                    <code class="language-markup">
-                        dotnet tool install -g NCompileBench
-                    </code>
+                    <pre><code class="language-markup">dotnet tool install -g NCompileBench</code></pre>
                     <p><br/>After installing NCompileBench, it is available for running through the command line:</p>
-                    <code class="language-markup">
-                        NCompileBench
-                    </code>
+                    <pre><code class="language-markup">NCompileBench</code></pre>
                     <p><br/>Note that the benchmark starts automatically.</p>
                 </div>
                 <div class="col">
