Added missing headers and favicon

--- a/src/NCompileBench.Web/wwwroot/index.html
+++ b/src/NCompileBench.Web/wwwroot/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>NCompileBench.io</title>
+    <meta name="description" content="NCompileBench is a benchmark which compiles .NET Core 3.1 based C#-code">
+    <meta name="keywords" content="performance, benchmark, compilation, .net">
+    <meta name="author" content="Mikael Koskinen">
     <base href="/"/>
     <link href="/assets/bootstrap.min.css" rel="stylesheet">
     <link href="/assets/docs.min.css" rel="stylesheet">
@@ -16,6 +19,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css" rel="stylesheet"/>
     <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <link rel="icon" type="image/png" href="/logo_36.png"/>
 </head>
 
 <body>
